--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = All-Projects
+[project]
+	description = talks 项目用于翻译 https://talks.golang.org 上的内容
+[submit]
+	action = cherry pick
