set user notification email to go-zh-dev@googlegroups.com

--- a/project.config
+++ b/project.config
@@ -4,3 +4,5 @@
 	description = talks 项目用于翻译 https://talks.golang.org 上的内容
 [submit]
 	action = cherry pick
+[notify "team"]
+	email = go-zh-dev@googlegroups.com
